# QNotepad

./: CMakeLists.txt  Document.cpp  Document.h  Notepad.cpp  Notepad.h  README.md  Settings.cpp  Settings.h  icons.qrc  main.cpp
